# AstraWeft

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release-candidate.yml
docs/: Architecture_Review_and_Gap_Analysis.md  Local_AI_Workflow_Manager_Architecture.md  Local_AI_Workflow_Manager_Architecture_v2.md  Local_AI_Workflow_Manager_Database_ER_Design.md  Local_AI_Workflow_Manager_Detailed_Technical_Design.md  Local_AI_Workflow_Manager_GUI_Prototype_Design.md  Local_AI_Workflow_Manager_Provider_Plugin_Interface_Spec.md  Product_Implementation_Roadmap.md  README.md
docs/adr/: ADR-000_Project_Naming.md  ADR-001_Modular_Monolith.md  ADR-002_PySide6_and_qasync.md  ADR-003_SQLite_SQLAlchemy_Alembic.md  ADR-004_OS_Keychain_Credentials.md  ADR-005_Provider_Plugin_API.md  ADR-006_JSON_Schema_and_UI_Schema.md  ADR-007_Open_Source_and_Platform_Policy.md  ADR-008_Provider_SDK_Packaging_and_Async_Secrets.md  ADR-009_Durable_Task_Submission_and_Recovery.md  ADR-010_Core_HTTP_and_Remote_Artifact_Boundary.md  ADR-011_Immutable_Workflow_Versions_and_Durable_Node_Intent.md  ADR-012_ComfyUI_Execution_Adapter_and_Loopback_Gateway.md  ADR-013_Staged_Local_Data_Maintenance.md  ADR-014_User_Configured_REST_Provider.md  README.md
docs/comfyui/: ComfyUI_Integration_Implementation_Design.md
docs/development/: Provider_Development_Guide.md  Quality_Gates.md
docs/operations/: Local_Data_Maintenance_Implementation_Design.md
docs/phase-reports/: Phase_0_Engineering_Baseline.md  Phase_1_Local_Runnable_Foundation.md  Phase_2_Provider_Model_Loop.md  Phase_3_Task_Runtime_Playground_Logs_Artifacts.md  Phase_4_Real_Provider_Integration.md  Phase_5_Workflow_Engine.md  Phase_6_ComfyUI_Integration.md  Phase_7_Product_Hardening.md  Phase_8_Local_Release_Engineering.md
docs/provider-adapters/: Custom_REST_Provider_Design.md  OpenAI_Responses_API_Adapter_Design.md  Runway_Async_Video_Adapter_Design.md
docs/release/: Beta_Release_and_Rollback_Policy.md
docs/user/: Getting_Started.md  Troubleshooting.md
docs/workflows/: Workflow_Engine_Implementation_Design.md
integrations/comfyui_custom_nodes/AstraWeftGateway/: README.md  __init__.py  nodes.py
packaging/: AstraWeft.spec  README.md
plugins/: README.md
plugins/custom-rest/: LICENSE  NOTICE  README.md  pyproject.toml
plugins/custom-rest/src/astraweft_custom_rest_provider/: __init__.py  client.py  plugin.py  plugin.toml  schemas.py
plugins/custom-rest/tests/: conftest.py  test_custom_rest_client.py  test_custom_rest_contract.py  test_custom_rest_edges.py
plugins/mock/: NOTICE  README.md  pyproject.toml
plugins/mock/src/astraweft_mock_provider/: __init__.py  client.py  plugin.py  plugin.toml  schemas.py
plugins/mock/tests/: conftest.py  test_client.py  test_contract.py
plugins/openai/: NOTICE  README.md  pyproject.toml
plugins/openai/src/astraweft_openai_provider/: __init__.py  client.py  plugin.py  plugin.toml  schemas.py
plugins/openai/tests/: conftest.py  test_openai_client.py  test_openai_contract.py
plugins/runway/: LICENSE  NOTICE  README.md  pyproject.toml
plugins/runway/src/astraweft_runway_provider/: __init__.py  client.py  plugin.py  plugin.toml  schemas.py
plugins/runway/tests/: conftest.py  test_runway_client.py  test_runway_contract.py
scripts/: build_desktop.py  capture_ui.py  generate_release_evidence.py  notarize_macos.py  run_local_release_gate.py  smoke_desktop.py  smoke_upgrade.py  verify_platform_release.py  verify_release_manifest.py
src/astraweft/: __init__.py  __main__.py
src/astraweft/application/: __init__.py  events.py  maintenance.py  query.py  settings.py  status.py  tracing.py
src/astraweft/application/comfyui/: __init__.py  commands.py  events.py  service.py
src/astraweft/application/providers/: __init__.py  commands.py  events.py  service.py
src/astraweft/application/tasks/: __init__.py  commands.py  events.py  runtime.py  service.py
src/astraweft/application/workflows/: __init__.py  commands.py  events.py  (+5 more)
src/astraweft/bootstrap/: __init__.py  app.py  cli.py  container.py  context.py  single_instance.py
src/astraweft/domain/: __init__.py
src/astraweft/infrastructure/: __init__.py
src/astraweft/ports/: __init__.py  artifacts.py  comfyui.py  maintenance.py  provider_plugins.py  providers.py  query.py  runtime.py  secrets.py  tasks.py  unit_of_work.py  workflows.py
src/astraweft/presentation/: __init__.py  accessibility.py  i18n.py  main_window.py  notifications.py  thumbnails.py
tests/: README.md  conftest.py  smoke_test.py
tests/gui/: test_accessibility_audit.py  test_comfyui_page.py  test_design_system.py  test_main_window.py  test_page_localization.py  test_phase3_performance.py  test_provider_pages.py  test_schema_form.py  test_settings_page.py  test_single_instance.py  test_task_pages.py  test_thumbnails.py  test_workflow_canvas_and_dialogs.py  test_workflow_page.py
tests/integration/: test_artifact_lifecycle.py  test_bootstrap.py  test_comfyui_edge_cases.py  test_comfyui_workflow.py  test_database.py  test_desktop_lifecycle.py  test_loopback_gateway.py  test_maintenance.py  test_package_entrypoint.py  test_phase7_scale.py  test_plugin_management.py  test_provider_service.py  test_query_service.py  test_task_repositories.py  test_task_service.py  test_unit_of_work.py  test_workflow_execution.py  test_workflow_repositories.py  test_workflow_scale.py  test_workflow_service.py
tests/unit/: test_artifact_writer.py  test_cli.py  test_comfyui_client.py  test_comfyui_domain.py  test_desktop_app.py  test_events.py  test_http_client.py  test_logging.py  test_provider_registry.py  test_release_scripts.py  test_runtime.py  test_secrets.py  test_settings.py  test_task_commands.py  test_task_domain.py  test_task_runtime.py  test_workflow_domain.py  test_workflow_runtime.py  test_workflow_transforms_and_serialization.py
(+83 files in other folders)
