[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "astraweft-custom-rest-provider"
version = "0.1.0.dev0"
description = "Declarative custom REST/JSON gateway Provider for AstraWeft."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "AstraWeft Contributors" }]
dependencies = ["astraweft-provider-sdk>=0.1.0.dev0"]

[project.entry-points."astraweft.providers"]
custom-rest = "astraweft_custom_rest_provider.plugin:CustomRestProviderPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/astraweft_custom_rest_provider"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE", "/NOTICE"]
